--- a/Views/layout.ejs
+++ b/Views/layout.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../public/css/navbar.css">
     <link rel="stylesheet" href="../public/css/home.css">
     <link rel="stylesheet" href="../public/css/addDonations.css">
+    <link rel="stylesheet" href="../public/css/manageDonation.css">
 </head>
 <body>
     <%- include("partials/Navbar")%>
