--- a/Views/layout.ejs
+++ b/Views/layout.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AID</title>
-    <link rel="stylesheet" href="../public/css/layout.css">
-    <link rel="stylesheet" href="../public/css/Authentication.css">
-    <link rel="stylesheet" href="../public/css/navbar.css">
-    <link rel="stylesheet" href="../public/css/home.css">
-    <link rel="stylesheet" href="../public/css/addDonations.css">
-    <link rel="stylesheet" href="../public/css/manageDonation.css">
+    <link rel="stylesheet" href="/public/css/layout.css">
+    <link rel="stylesheet" href="/public/css/Authentication.css">
+    <link rel="stylesheet" href="/public/css/navbar.css">
+    <link rel="stylesheet" href="/public/css/home.css">
+    <link rel="stylesheet" href="/public/css/addDonations.css">
+    <link rel="stylesheet" href="/public/css/manageDonation.css">
 </head>
 <body>
     <%- include("partials/Navbar")%>
@@ -20,9 +20,11 @@
         <%- include("partials/SuccessAlert") %>
     <%}%>
     <%- body %>
-    <script src="../public/js/Main.js"></script>
-    <script src="../public/js/navbar.js"></script>
-    <script src="../public/js/Authentication.js"></script>
-    <script src="../public/js/addDonations.js"></script>
+    <script src="/public/js/Main.js"></script>
+    <script src="/public/js/navbar.js"></script>
+    <script src="/public/js/Authentication.js"></script>
+    <script src="/public/js/addDonations.js"></script>
+    <script src="/public/js/manageDonation.js"></script>
+    <script src="/public/js/editDonations.js"></script>
 </body>
 </html>
