--- a/Views/partials/Navbar.ejs
+++ b/Views/partials/Navbar.ejs
@@ -1,6 +1,6 @@
 <div class="Navbar">
     <div class="NavfloatingLogoContainer">
-        <img src="../public/Assets/logo.png">
+        <img src="/public/Assets/logo.png">
         <h2>
             MyAid
         </h2>
