Added admin actions based on donation and myRequest function for the recipient of the donation

--- a/Views/ManageDonations.ejs
+++ b/Views/ManageDonations.ejs
@@ -24,7 +24,7 @@
                     <button type="button" class="mangeDonationBtn ManageBtn" type="button" onclick="editDonation('<%-donation.id%>')">Edit</button>
                     <button type="button" class="mangeDonationBtn Deletebtn" type="button" onclick="removeDonation('<%-donation.id%>')">Remove</button>
                     <button type="button" class="mangeDonationBtn changeStatus" type="button" onclick="changeDonationStatus('<%-donation.id%>')">Change Status</button>
-                    <button type="button" class="mangeDonationBtn donationRequest" type="button">See  Request</button>
+                    <button type="button" class="mangeDonationBtn donationRequest" type="button" onclick="seeDonationRequests('<%-donation.id%>')">See  Request</button>
                 </div>
             </form>
        <% }) %>
