--- a/Views/layout.ejs
+++ b/Views/layout.ejs
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="/public/css/home.css">
     <link rel="stylesheet" href="/public/css/addDonations.css">
     <link rel="stylesheet" href="/public/css/manageDonation.css">
+    <link rel="stylesheet" href="/public/css/seeRequests.css">
+    <link rel="stylesheet" href="/public/css/myRequest.css">
+
 </head>
 <body>
     <%- include("partials/Navbar")%>
@@ -26,5 +29,7 @@
     <script src="/public/js/addDonations.js"></script>
     <script src="/public/js/manageDonation.js"></script>
     <script src="/public/js/editDonations.js"></script>
+    <script src="/public/js/availableDonations.js"></script>
+    <script src="/public/js/seeRequest.js"></script>
 </body>
 </html>
