home  page update

--- a/Views/home.ejs
+++ b/Views/home.ejs
@@ -1,3 +1,32 @@
 <div class="mainHomeContainer">
-    <!-- <video src="../public/Assets/bgvideo.mp4" autoplay muted ></video> -->
+    <div class="infoDisplayContainer">
+        <div class="homeNavContainer">
+            <div class="logoContainer">
+                <img src="/public/Assets/logo.png" class="homePageLogo"/>
+            </div>
+            <h3>MyAid</h3>
+        </div>
+        <div class="homeBodyInfoContainer">
+            <div class="vision infoContainer">
+                <h4>Vision</h4>
+                <p>
+                    To create a world where resources are shared effectively to meet the needs of all, empowering communities through accessible aid and mutual support.
+                </p>
+            </div>
+            <div class="mission infoContainer">
+                <h4>Mission</h4>
+                <p>
+                    Our mission is to facilitate transparent and impactful resource distribution by connecting donors and recipients, ensuring timely assistance for those in need.
+                </p>
+            </div>
+            <div class="goals infoContainer">
+                <h4>Goals</h4>
+                <p>
+                    - Establish a trusted platform for resource sharing<br>
+                    - Increase community engagement and awareness<br>
+                    - Improve the lives of underserved populations by enhancing resource accessibility
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
