--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -7,7 +7,7 @@
     </form>
     <div class="authMoreOptionsContainer">
         <span>Dont Have and Account ?</span>
-        <button class="authSecondaryButton registerBtn" id="gotoRegisterPageBtn">Signup</button>
+        <button class="authSecondaryButton registerBtn" id="gotoRegisterPageBtn" onclick="gotoRegisterPageBtn()">Signup</button>
 
     </div>
 </div>
