--- a/Views/register.ejs
+++ b/Views/register.ejs
@@ -22,7 +22,7 @@
 
  <div class="authMoreOptionsContainer">
         <span>Already Have and Account ?</span>
-        <button class="authSecondaryButton ">Login</button>
+        <button class="authSecondaryButton " onclick="goToLoginPage()">Login</button>
 
     </div>
 </div>
